force-app/main/default/objects/NCMT_Labor_Resource__c/NCMT_Labor_Resource__c.object-meta.xml
<CustomObject>
    <label>NCMT Labor Resource</label>
    <nameField>
        <label>Trade Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCMT Labor Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>