force-app/main/default/objects/NCMT_Labor_Resource__c/fields/Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate__c</fullName>
    <label>Bare Cost - hourly</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>