force-app/main/default/objects/NCMT_Labor_Resource__c/fields/O_P_Cost__c.field-meta.xml
<CustomField>
    <fullName>O_P_Cost__c</fullName>
    <label>O&amp;P Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>