force-app/main/default/objects/NCMT_Labor_Resource__c/fields/Other_Tax__c.field-meta.xml
<CustomField>
    <fullName>Other_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Other Tax</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>