force-app/main/default/objects/NCMT_Labor_Resource__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <label>Skill Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Journey Man</fullName>
            </value>
            <value>
                <fullName>Foreman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>