force-app/main/default/objects/NCMT_Labor_Resource__c/fields/Source_of_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Hourly_Rate__c</fullName>
    <label>Source of Hourly Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Union Based</fullName>
            </value>
            <value>
                <fullName>Davis Bacon</fullName>
            </value>
            <value>
                <fullName>Includes Benefits Rates</fullName>
            </value>
            <value>
                <fullName>Includes Workers Comp Rate per jurisdiction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>