force-app/main/default/objects/NCMT_Labor_Resource__c/fields/Unemployment_Tax__c.field-meta.xml
<CustomField>
    <fullName>Unemployment_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unemployment Tax</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>