force-app/main/default/objects/NCMT_Labor_Resource__c/listViews/FY_2020.listView-meta.xml
<ListView>
    <fullName>FY_2020</fullName>
    <columns>NAME</columns>
    <columns>Labor_Resource_Name__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Hourly_Rate__c</columns>
    <columns>O_P_Cost__c</columns>
    <columns>UOM__c</columns>
    <columns>Worker_s_Compensation_Insurance__c</columns>
    <columns>Unemployment_Tax__c</columns>
    <columns>Social_Security_Tax__c</columns>
    <columns>Other_Tax__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <label>FY-2020</label>
</ListView>